<resources>
    <string name="key_settings_debug_dump_level">dump_level</string>
    <string name="key_settings_debug_enable_bug_reporting">enable_bug_reporting</string>
    <string name="key_settings_network_connection_timeout">network_connection_timeout</string>
    <string name="key_settings_general_apps_per_page">general_apps_per_page</string>
    <string name="key_settings_general_country">general_country</string>
    <string name="key_settings_general_free_apps">show_free_apps</string>
    <string name="key_settings_general_x_screenshots">x_screenshots</string>
    <string name="Flurry">SWWCJ1GJ15YCYVIJU391</string>
    <string name="Partner">global</string>
    <string name="Firm">SlideME</string>
    <string name="sam_version">SAM 4.0 20101014P1</string>
    <string name="title_application">SAM 4.0</string>
    <string name="FEED_SERVER_URL">http://stream.slideme.org/stream</string>
    <string name="SLIDEME_HTTPS_URL">https://slideme.org</string>
    <string name="SLIDEME_HTTP_URL">http://slideme.org</string>
    <string name="http_host_url">http://slideme.org/crash</string>
    <string name="http_post_var1">filename</string>
    <string name="http_post_var2">crashLog</string>
    <string name="http_post_value1">LogException.dump</string>
    <string name="apk_name">sam</string>
    <string name="slideme">SlideME</string>
    <string name="date_format">dd MMM yy</string>
    <string name="update_dialog_name">New version</string>
    <string name="update_dialog_text">The new version of SAM from SlideME is available. Do you want to install it?</string>
    <string name="new_version_start_download">Download started</string>
    <string name="new_version_download_fail">Download failed</string>
    <string name="new_version_download_success">The new version of SAM client downloaded</string>
    <string name="new_version_install_start">The install process started</string>
    <string name="new_version_install_finish">The install process finished</string>
    <string name="update_button">Update</string>
    <string name="agreement_dialog_name">SlideME Application End User Agreement</string>
    <string name="agreement_dialog_text">\u0020<p>PLEASE READ THE FOLLOWING TERMS AND CONDITIONS CAREFULLY BEFORE DOWNLOADING OR USING the SlideME APPLICATION Management software ( <b> <i>sam</i> </b> ) and/or applications made available by SlideME ( <b> <i>Applications</i> </b> ) through the SlideME application marketplace (the <b> <i>Marketplace</i> </b> ). THIS AGREEMENT GOVERNS YOUR USE OF the sam and any application made available to you through the marketplace. \n </p> \n\n SlideME is willing to license the sam and applications to you only upon the condition that you accept all the terms contained in this Agreement. By downloading, displaying or USING the SAM and/or applications, you indicate that you have read and understand this Agreement and accept all of its terms without limitation. If you do not accept all the terms of this Agreement you will not be AUTHORIZED to download, display OR USe the SAM and/or applications. \n\n <b>License and Purchase.</b> \n\n (a)<u>Grant</u>. Subject to the terms of this Agreement, SlideME grants you a non-exclusive and non-transferable license to download and use the SAM, for purposes of (i) accessing and displaying SlideMEs marketplace and catalog of Applications and (ii) downloading and managing Applications purchased through SlideMEs marketplace. SlideME and its licensors reserve all rights in the SAM not expressly granted to you in this Agreement. You also grant SlideME to present featured content, either it is an application, image, moving image, link, or logo in the form of advertising.\u0020</string>
    <string name="agreement_copyright">\n\n <b> <small>Copyright (c) 2010 SlideME LLC,WA,USA EULA v102EN.090107</small> </b>\u0020</string>
    <string name="redownload">Redownload</string>
    <string name="download">Download</string>
    <string name="update">Update!</string>
    <string name="terms_cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="search_no_matches">No matches found for:</string>
    <string name="search_tips">Search tips:</string>
    <string name="check_spelling">* Check spelling.</string>
    <string name="try_less_keywords">* Try less specific keywords.</string>
    <string name="try_different_keywords">* Try different keywords or use synonyms.</string>
    <string name="vendorname">VendorName</string>
    <string name="category">Category</string>
    <string name="screenshots">Screenshots</string>
    <string name="title_settings_general_apps_per_page">Apps per page</string>
    <string name="title_settings_general_free_apps">Free apps mode</string>
    <string name="title_settings_general_x_screenshots">Show up to X screenshots</string>
    <string name="summary_settings_general_free_apps">Show only free apps</string>
    <string name="summary_settings_general_x_screenshots">0-All</string>
</resources>