<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:id="@id/no_matches" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:gravity="center_vertical" android:id="@id/results" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_no_matches" />
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ffccccff" android:gravity="center_vertical" android:id="@id/tips" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_tips" android:layout_below="@id/results" />
    <TextView android:textSize="14.0sp" android:textColor="#ffccccff" android:gravity="center_vertical" android:id="@id/i1" android:paddingLeft="30.0dip" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/check_spelling" android:layout_below="@id/tips" />
    <TextView android:textSize="14.0sp" android:textColor="#ffccccff" android:gravity="center_vertical" android:id="@id/i2" android:paddingLeft="30.0dip" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_less_keywords" android:layout_below="@id/i1" />
    <TextView android:textSize="14.0sp" android:textColor="#ffccccff" android:gravity="center_vertical" android:id="@id/i3" android:paddingLeft="30.0dip" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_different_keywords" android:layout_below="@id/i2" />
</RelativeLayout>