<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:gravity="bottom|center" android:id="@id/application_display" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/application_display_termsImage" android:padding="1.0dip" android:visibility="gone" android:layout_width="200.0dip" android:layout_height="44.0dip" android:text="@string/download" />
    <Button android:id="@id/application_display_cancel" android:padding="1.0dip" android:visibility="gone" android:layout_width="200.0dip" android:layout_height="44.0dip" android:text="@string/terms_cancel" />
    <Button android:id="@id/application_display_redownload" android:padding="1.0dip" android:visibility="gone" android:layout_width="200.0dip" android:layout_height="44.0dip" android:text="@string/redownload" />
</LinearLayout>