<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:id="@id/application_display" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/application_display_scroll" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:layout_x="0.0dip" android:layout_y="35.0dip">
        <RelativeLayout android:id="@id/application_display_layout" android:paddingTop="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_x="0.0dip">
            <ImageView android:id="@id/application_display_icon" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginRight="5.0dip" android:layout_y="10.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/application_display_displayName" android:paddingTop="10.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-15.0dip" android:scrollHorizontally="true" android:shadowDx="0.0" android:shadowDy="1.1" android:shadowRadius="0.8" android:layout_toRightOf="@id/application_display_icon" />
            <ImageView android:id="@id/application_display_stars1" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginTop="5.0dip" android:layout_toRightOf="@id/application_display_icon" android:layout_below="@id/application_display_displayName" />
            <ImageView android:id="@id/application_display_stars2" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginTop="5.0dip" android:layout_toRightOf="@id/application_display_stars1" android:layout_below="@id/application_display_displayName" />
            <ImageView android:id="@id/application_display_stars3" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginTop="5.0dip" android:layout_toRightOf="@id/application_display_stars2" android:layout_below="@id/application_display_displayName" />
            <ImageView android:id="@id/application_display_stars4" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginTop="5.0dip" android:layout_toRightOf="@id/application_display_stars3" android:layout_below="@id/application_display_displayName" />
            <ImageView android:id="@id/application_display_stars5" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginTop="5.0dip" android:layout_toRightOf="@id/application_display_stars4" android:layout_below="@id/application_display_displayName" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@color/darker_green" android:id="@id/update" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" android:layout_toRightOf="@id/application_display_stars5" android:layout_below="@id/application_display_displayName" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLength="20" android:layout_toRightOf="@id/application_display_icon" android:layout_below="@id/application_display_stars1" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ff20abae" android:id="@id/application_display_v" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="v" android:shadowDx="0.0" android:shadowDy="1.1" android:shadowRadius="0.8" android:layout_toRightOf="@id/size" android:layout_below="@id/application_display_stars1" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ff20abae" android:id="@id/application_display_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="1.0" android:maxLength="14" android:shadowDx="0.0" android:shadowDy="1.1" android:shadowRadius="0.8" android:layout_toRightOf="@id/application_display_v" android:layout_below="@id/application_display_stars1" />
            <ImageView android:id="@id/application_display_vendorImage" android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/img_ico_author" android:layout_below="@id/application_display_v" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/application_display_vendorName" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vendorname" android:maxLength="14" android:shadowDx="0.0" android:shadowDy="1.1" android:shadowRadius="0.8" android:layout_toRightOf="@id/application_display_vendorImage" android:layout_below="@id/application_display_v" />
            <ImageView android:id="@id/application_display_dateImage" android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/img_ico_date" android:layout_toRightOf="@id/application_display_vendorName" android:layout_below="@id/application_display_v" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/application_display_creationDate" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/application_display_dateImage" android:layout_below="@id/application_display_v" />
            <ImageButton android:id="@id/application_display_video" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/img_vidpng8" android:layout_below="@id/application_display_displayName" android:layout_alignParentRight="true" />
            <ImageView android:id="@id/application_display_categoryImage" android:paddingLeft="10.0dip" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/img_ico_category" android:layout_below="@id/application_display_vendorImage" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/application_display_category" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/category" android:shadowDx="0.0" android:shadowDy="1.1" android:shadowRadius="0.8" android:layout_toRightOf="@id/application_display_categoryImage" android:layout_below="@id/application_display_vendorImage" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="right|center" android:id="@id/app_display_free" android:paddingTop="7.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/price" android:maxLength="9" android:layout_toRightOf="@id/application_display_categoryImage" android:layout_below="@id/application_display_vendorImage" android:layout_alignParentRight="true" />
            <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="right|center" android:id="@id/app_display_price" android:paddingTop="7.0dip" android:paddingRight="25.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/price" android:maxLength="9" android:layout_toRightOf="@id/application_display_categoryImage" android:layout_below="@id/application_display_vendorImage" android:layout_alignParentRight="true" />
            <ImageView android:gravity="right|center" android:id="@id/app_display_dollar" android:paddingTop="9.0dip" android:paddingRight="5.0dip" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/img_ico_price_big" android:layout_below="@id/application_display_vendorImage" android:layout_alignParentRight="true" />
            <ImageView android:id="@id/application_display_line" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/img_groove" android:layout_below="@id/application_display_categoryImage" />
            <ImageView android:id="@id/application_display_line_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/img_groove_highlight" android:layout_below="@id/application_display_line" />
            <TextView android:textSize="16.0sp" android:textColor="@android:color/white" android:textColorLink="@color/link" android:autoLink="all" android:id="@id/application_display_shortDescription" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="3.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/application_display_line_1" />
            <ImageView android:id="@id/application_display_line_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/img_groove" android:layout_below="@id/application_display_shortDescription" />
            <ImageView android:id="@id/application_display_line_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/img_groove_highlight" android:layout_below="@id/application_display_line_2" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/application_display_screenshotheader" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:text="@string/screenshots" android:shadowDx="0.0" android:shadowDy="1.1" android:shadowRadius="0.8" android:layout_below="@id/application_display_line_3" />
            <ImageSwitcher android:id="@id/switcher" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="400.0dip" android:layout_margin="8.0dip" android:layout_below="@id/application_display_screenshotheader" android:layout_alignParentLeft="true" />
            <Gallery android:gravity="fill_horizontal|center" android:id="@id/gallery" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginTop="10.0dip" android:spacing="10.0dip" android:layout_below="@id/switcher" android:layout_alignParentLeft="true" />
            <ImageView android:id="@id/application_loading_icon" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/application_display_line_3" />
        </RelativeLayout>
    </ScrollView>
    <include android:id="@id/compatibility" layout="\@layout/l_application_display_compatibility" />
    <include android:id="@id/bar" layout="\@layout/l_application_display_bar" />
    <include android:id="@id/bar_open" layout="\@layout/l_application_display_open_bar" />
</RelativeLayout>